# Raspberry

./: .dir_bash_history  CMakeCache.txt  CMakeLists.txt  Makefile  README  README.md  cmake_install.cmake  install_manifest.txt  qc.c
include/: .dir_bash_history  htslib  qc.h
include/htslib-1.2.1/: .dir_bash_history
include/htslib-1.2.1/htslib/: .dir_bash_history
include/judy-1.0.5/: .dir_bash_history  Makefile  config.status  libtool
include/judy-1.0.5/doc/: Makefile
include/judy-1.0.5/doc/man/man3/: Judy  Judy1  Judy1_funcs  JudyHS  JudyHS_funcs  JudyL  JudyL_funcs  JudySL  JudySL_funcs
include/judy-1.0.5/src/: .dir_bash_history  Makefile
include/judy-1.0.5/src/Judy1/: Judy1TablesGen  Makefile
include/judy-1.0.5/src/Judy1/.deps/: Judy1Cascade.Plo  Judy1Count.Plo  Judy1CreateBranch.Plo  Judy1Decascade.Plo  Judy1First.Plo  Judy1FreeArray.Plo  Judy1InsertBranch.Plo  Judy1MallocIF.Plo  Judy1MemActive.Plo  Judy1MemUsed.Plo  Judy1Set.Plo  Judy1SetArray.Plo  Judy1Tables.Plo  Judy1Test.Plo  Judy1Unset.Plo  libcount_la-Judy1ByCount.Plo  libinline_la-j__udy1Test.Plo  libnext_la-Judy1Next.Plo  libnext_la-Judy1NextEmpty.Plo  libprev_la-Judy1Prev.Plo  libprev_la-Judy1PrevEmpty.Plo
include/judy-1.0.5/src/JudyCommon/: Makefile
include/judy-1.0.5/src/JudyHS/: Makefile
include/judy-1.0.5/src/JudyL/: JudyLTablesGen  Makefile
include/judy-1.0.5/src/JudySL/: Makefile
include/judy-1.0.5/test/: Makefile
include/judy-1.0.5/tool/: Makefile  jhton
include/judy-1.0.5/tool/.deps/: jhton.Po
utils/: read_length_distribution.py
(+24 files in other folders)
